2000-02-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed issuing SlipperyIcon/StickyIcon at run time

2000-02-05  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/menus.c (paint_item): fixed the text y coordinate in
	non-first titles.
	* fvwm/windowlist.c (do_windowList): removed a space in geometry
	* fvwm/functions.c (expand): fixed the core dump on the expanding
	of several variables, something like: + I All ($r) Iconify $0

2000-02-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (DoSetFocus):
	windows that have the InputFocus hint set to false are not hilighted
	against their will if 'Lenience' isn't used

	* fvwm/screen.h (struct):
	use 'unsigned : 3' instead of 'DecorFaceType : 3'
	use 'unsigned : 2' instead of 'JustificationType : 2'

	* fvwm/icons.c (AutoPlaceIcon):
	another page flipping fix:
	  style * icon, iconify, movetopage 1 1, deiconify, iconify; the
	  latter two issued from FvwmConsole
	and another page flipping fix:
	  style * noicon, iconify, movetopage 1 1, deiconify, iconify; the
	  latter two issued from FvwmConsole

	* fvwm/virtual.c (MoveViewport):
	fixed page flipping with sticky icons of shaded windows:
	  Style * stickyicon, shade, iconify, flip page, deiconify, unshade
	fixed another page flipping bug:
	  shade, iconify, movetopage 1 1, switch to page 1 1, deiconify, unshade

2000-02-03  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1 (file): Add description of Style SlipperyIcon.

2000-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (AddToMenu):
	fixed core dump in labels containing only a pixmap
	removed some pretty stupid redundant cut-n-paste code
	(AddToMenu):
	fixed automatic hotkey overriding user specified hotkeys

2000-02-03  Darren Stuart Embry  <dsembr01@slug.louisville.edu>

	* fvwm/menus.c (paint_item):
	* fvwm/menus.c (NewMenuStyle):
	fixed ActiveColorstyle for menus; would not work without also
	setting HilightBack and ActiveFore.
